--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
-sudo: false
 language: node_js
 node_js:
-  - '10'
-  - '8'
+ - node
+install:
+  - npm install
 script:
-  - npm run lint
-  - npm run test:cover
-after_success:
-  - npm run coveralls
+- npm run test
