--- a/package.json
+++ b/package.json
@@ -1,66 +1,51 @@
 {
-  "private": false,
-  "name": "do-pipeline",
-  "version": "0.0.2",
-  "description": "A simple but powerful way to pipeline code",
-  "repository": "https://github.com/davidroman0O/do-pipeline",
-  "author": "David Roman <hello@davidroman.io>",
-  "contributors": [
-    "David Roman <hello@davidroman.io>"
-  ],
-  "license": "MIT",
-  "keywords": [],
-  "main": "index.js",
-  "jsnext:main": "index.es.js",
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ],
-    "plugins": [
-      "@babel/plugin-transform-runtime"
-    ]
-  },
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "extends": "airbnb-base"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.0.0",
-    "bluebird": "^3.5.5"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "chai": "^4.2.0",
-    "coveralls": "^2.11.14",
-    "del": "^2.2.2",
-    "easystatic": "^0.1.12",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "rollup": "^0.67.3",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "sinon": "^7.1.1"
-  },
+  "name": "do-pieline",
+  "version": "0.0.1",
+  "description": "",
+  "main": "build/index.js",
   "scripts": {
-    "lint": "eslint src test tools",
-    "test": "mocha --require @babel/register",
-    "test:watch": "mocha --require @babel/register --reporter min --watch",
-    "test:cover": "nyc npm test",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "build": "node tools/build",
-    "prepublish": "npm run build",
-    "publish:docs": "easystatic deploy docs --repo kriasoft/babel-starter-kit",
-    "start": "easystatic start docs"
+    "build": "webpack",
+    "test": "jest",
+    "prepare": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davidroman0O/do-pipeline"
+  },
+  "author": "David Roman <hello@davidroman.io> (https://github.com/davidroman0O)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/davidroman0O/do-pipeline/issues"
+  },
+  "homepage": "https://github.com/davidroman0O/do-pipeline",
+  "keywords": [
+    "library",
+    "pipeline",
+    "es6"
+  ],
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "babel-preset-minify": "^0.5.0",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
+    "prettier-webpack-plugin": "^1.2.0",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
+  },
+  "dependencies": {},
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/scripts/testMock.js",
+      "\\.(css|less)$": "<rootDir>/scripts/testMock.js"
+    }
   }
 }
