--- a/package.json
+++ b/package.json
@@ -1,51 +1,77 @@
 {
   "name": "do-pipeline",
-  "version": "0.0.4",
-  "description": "",
-  "main": "build/index.js",
-  "scripts": {
-    "build": "webpack",
-    "test": "jest",
-    "prepare": "npm run build"
-  },
-  "repository": {
-    "type": "git",
+  "version": "0.0.5",
+  "description": "Simple DO pipeline promise",
+  "license": "MIT",
+  "repository": "https://github.com/davidroman0O/do-pipeline",
+  "main": "dist/index.js",
+  "author": {
+    "name": "David Roman",
+    "email": "hello@davidroman.io",
     "url": "https://github.com/davidroman0O/do-pipeline"
   },
-  "author": "David Roman <hello@davidroman.io> (https://github.com/davidroman0O)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/davidroman0O/do-pipeline/issues"
+  "files": [
+    "dist",
+    "src"
+  ],
+  "scripts": {
+    "test": "jest",
+    "coverage": "npm test -- --coverage",
+    "postcoverage": "open-cli coverage/lcov-report/index.html",
+    "lint": "eslint .",
+    "flow": "flow check",
+    "docs": "documentation readme src --section=API",
+    "postdocs": "git add README.md",
+    "clean": "rimraf dist",
+    "flowbuild": "flow-copy-source src dist",
+    "prebuild": "npm run docs && npm run clean && npm run flowbuild",
+    "build": "babel src -d dist",
+    "prerelease": "npm run lint && npm test && npm run build",
+    "release": "standard-version",
+    "postpublish": "git push origin master --follow-tags"
   },
-  "homepage": "https://github.com/davidroman0O/do-pipeline",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "keywords": [
     "library",
-    "pipeline",
-    "es6"
+    "pipeline"
   ],
-  "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "babel-loader": "^8.0.6",
-    "babel-preset-minify": "^0.5.0",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
-    "jest": "^24.8.0",
-    "prettier": "^1.18.2",
-    "prettier-webpack-plugin": "^1.2.0",
-    "style-loader": "^1.0.0",
-    "url-loader": "^2.0.0",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+  "dependencies": {
+    "bluebird": "3.5.5"
   },
-  "dependencies": {},
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/scripts/testMock.js",
-      "\\.(css|less)$": "<rootDir>/scripts/testMock.js"
-    }
+  "devDependencies": {
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/preset-env": "7.4.5",
+    "@babel/preset-flow": "7.0.0",
+    "babel-eslint": "10.0.2",
+    "babel-jest": "24.8.0",
+    "documentation": "11.0.1",
+    "eslint": "6.0.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "5.0.0",
+    "eslint-plugin-flowtype": "3.10.5",
+    "eslint-plugin-flowtype-errors": "4.1.0",
+    "eslint-plugin-import": "2.17.3",
+    "eslint-plugin-prettier": "3.1.0",
+    "flow-bin": "0.101.1",
+    "flow-copy-source": "2.0.6",
+    "husky": "2.4.1",
+    "jest": "24.8.0",
+    "lint-staged": "8.2.1",
+    "open-cli": "5.0.0",
+    "prettier": "1.18.2",
+    "rimraf": "2.6.3",
+    "standard-version": "6.0.1"
   }
 }
