--- a/package.json
+++ b/package.json
@@ -1,77 +1,94 @@
 {
   "name": "do-pipeline",
-  "version": "0.0.5",
-  "description": "Simple DO pipeline promise",
-  "license": "MIT",
+  "version": "1.0.0",
+  "description": "Simple function DO i use everyday",
+  "main": "build/main/index.js",
+  "typings": "build/main/index.d.ts",
+  "module": "build/module/index.js",
   "repository": "https://github.com/davidroman0O/do-pipeline",
-  "main": "dist/index.js",
-  "author": {
-    "name": "David Roman",
-    "email": "hello@davidroman.io",
-    "url": "https://github.com/davidroman0O/do-pipeline"
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
+  "license": "MIT",
+  "keywords": [],
   "scripts": {
-    "test": "jest",
-    "coverage": "npm test -- --coverage",
-    "postcoverage": "open-cli coverage/lcov-report/index.html",
-    "lint": "eslint .",
-    "flow": "flow check",
-    "docs": "documentation readme src --section=API",
-    "postdocs": "git add README.md",
-    "clean": "rimraf dist",
-    "flowbuild": "flow-copy-source src dist",
-    "prebuild": "npm run docs && npm run clean && npm run flowbuild",
-    "build": "babel src -d dist",
-    "prerelease": "npm run lint && npm test && npm run build",
-    "release": "standard-version",
-    "postpublish": "git push origin master --follow-tags"
+    "describe": "npm-scripts-info",
+    "build": "run-s clean && run-p build:*",
+    "build:main": "tsc -p tsconfig.json",
+    "build:module": "tsc -p tsconfig.module.json",
+    "fix": "run-s fix:*",
+    "fix:prettier": "prettier \"src/**/*.ts\" --write",
+    "fix:tslint": "tslint --fix --project .",
+    "test": "run-s build test:*",
+    "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
+    "test:unit": "nyc --silent ava",
+    "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
+    "cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
+    "cov:html": "nyc report --reporter=html",
+    "cov:send": "nyc report --reporter=lcov && codecov",
+    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
+    "doc": "run-s doc:html && open-cli build/docs/index.html",
+    "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out build/docs",
+    "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
+    "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
+    "version": "standard-version",
+    "reset": "git clean -dfx && git reset --hard && npm i",
+    "clean": "trash build test",
+    "prepare-release": "run-s reset test cov:check doc:html version doc:publish"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "scripts-info": {
+    "info": "Display information about the package scripts",
+    "build": "Clean and rebuild the project",
+    "fix": "Try to automatically fix any linting problems",
+    "test": "Lint and unit test the project",
+    "watch": "Watch and rebuild the project on save, then rerun relevant tests",
+    "cov": "Rebuild, run tests, then create and open the coverage report",
+    "doc": "Generate HTML API documentation and open it in a browser",
+    "doc:json": "Generate API documentation in typedoc JSON format",
+    "version": "Bump package.json version, update CHANGELOG.md, tag release",
+    "reset": "Delete all untracked files and reset the repo to the last commit",
+    "prepare-release": "One-step: clean, build, test, publish docs, and prep a release"
   },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
+  "engines": {
+    "node": ">=8.9"
   },
-  "keywords": [
-    "library",
-    "pipeline"
-  ],
   "dependencies": {
-    "bluebird": "3.5.5"
+    "sha.js": "^2.4.11"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
-    "@babel/preset-env": "7.4.5",
-    "@babel/preset-flow": "7.0.0",
-    "babel-eslint": "10.0.2",
-    "babel-jest": "24.8.0",
-    "documentation": "11.0.1",
-    "eslint": "6.0.0",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-config-prettier": "5.0.0",
-    "eslint-plugin-flowtype": "3.10.5",
-    "eslint-plugin-flowtype-errors": "4.1.0",
-    "eslint-plugin-import": "2.17.3",
-    "eslint-plugin-prettier": "3.1.0",
-    "flow-bin": "0.101.1",
-    "flow-copy-source": "2.0.6",
-    "husky": "2.4.1",
-    "jest": "24.8.0",
-    "lint-staged": "8.2.1",
-    "open-cli": "5.0.0",
-    "prettier": "1.18.2",
-    "rimraf": "2.6.3",
-    "standard-version": "6.0.1"
+    "ava": "2.2.0",
+    "codecov": "^3.5.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "gh-pages": "^2.0.1",
+    "npm-run-all": "^4.1.5",
+    "@bitjson/npm-scripts-info": "^1.0.0",
+    "nyc": "^14.1.1",
+    "prettier": "^1.18.2",
+    "standard-version": "^6.0.1",
+    "trash-cli": "^3.0.0",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-immutable": "^6.0.1",
+    "typescript": "^3.5.3"
+  },
+  "ava": {
+    "failFast": true,
+    "files": [
+      "build/main/**/*.spec.js"
+    ],
+    "sources": [
+      "build/main/**/*.js"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "prettier": {
+    "singleQuote": true
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "exclude": [
+      "**/*.spec.js"
+    ]
   }
 }
