--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "do-pipeline",
-  "version": "1.0.0",
+  "version": "0.0.7",
   "description": "Simple function DO i use everyday",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/davidroman0O/do-pipeline",
   "license": "MIT",
-  "keywords": [],
+  "keywords": [
+      "pipeline",
+      "pipelines"
+  ],
   "scripts": {
     "describe": "npm-scripts-info",
     "build": "run-s clean && run-p build:*",
