--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "do-pipeline",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Make pipeline of functions into pipeline of functions into pipeline of...",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -25,9 +25,12 @@
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:tslint": "tslint --fix --project .",
     "test": "run-s build test:*",
+    "test:log": "run-s build test:*",
     "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
-    "test:unit": "nyc --silent ava",
+	"test:unit": "nyc --silent ava",
+	"test:unit:log": "nyc ava --verbose",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
+    "watch:log": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit:log -- --watch\"",
     "cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
     "cov:html": "nyc report --reporter=html",
     "cov:send": "nyc report --reporter=lcov && codecov",
