--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "do-pipeline",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Make pipeline of functions into pipeline of functions into pipeline of...",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -14,7 +14,12 @@
   },
   "keywords": [
       "pipeline",
-      "pipelines"
+	  "pipelines",
+	  "data-oriented-design",
+	  "data-oriented",
+	  "do",
+	  "minimalist",
+	  "minimalistic"
   ],
   "scripts": {
     "describe": "npm-scripts-info",
